@startuml

title __SHARE's Class Diagram__\n

  namespace com.example.edelhome {
    namespace ui.share {
      class com.example.edelhome.ui.share.ShareFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.example.edelhome {
    namespace ui.share {
      class com.example.edelhome.ui.share.ShareViewModel {
          - mText : MutableLiveData<String>
          + ShareViewModel()
          + getText()
      }
    }
  }
  

  com.example.edelhome.ui.share.ShareFragment -up-|> androidx.fragment.app.Fragment
  com.example.edelhome.ui.share.ShareFragment o-- com.example.edelhome.ui.share.ShareViewModel : shareViewModel
  com.example.edelhome.ui.share.ShareViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
